# UAV-Triage-System

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
DEM-Pathfinding/: README.md  run_mission.sh  select_points.py
DEM-Pathfinding/planners/: gridplanner.py  rasterplanner.py
Trauma_FInale/: final_act.py
configs/: config.yaml
scripts/: download_demo_video.sh  run_mission.sh
src/datasets/: dynrep_dataset.py  kubric_dataset.py  metaflow_dataset.py  pointdataset.py
src/detection/: __init__.py  batch_demo_yolo.py  demo.py  demo_batch.py  motion_analyzer.py  path_analysis.py  plot_trajectories.py  rep_ratio.py  sliding_window.py  vel_acc.py  yolo_detector.py  yolo_segmenter.py
src/detection/nets/: __init__.py  alltracker.py
src/pathfinding/: __init__.py  grid_planner.py  raster_planner.py  select_points.py
src/training/: stage1_trainer.py  stage2_trainer.py
src/trauma/: trauma_assessor.py
src/utils/: basic_utils.py  data_utils.py  improc.py  loss_utils.py  misc_utils.py  sampling_utils.py  saveload_utils.py
twitching_detection_alltracker/: README.md  batch_demo_yolo.py  demo.py  demo_batch.py  demo_gemini.py  motion_analyzer.py  new_rule.py  path_by_disp.py  plot_trajectories.py  rep_ratio.py  sliding_window.py  vel_acc.py  yolo.py  yolo_crop.py
twitching_detection_alltracker/utils/: improc.py
