[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uav-triage-system"
version = "1.0.0"
description = "UAV-based casualty triage system: pathfinding, trauma assessment, and twitching detection"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "scikit-image>=0.21.0",
    "einops>=0.6.0",
    "moviepy>=1.0.3",
    "h5py>=3.9.0",
    "tensorboardX>=2.6.0",
    "prettytable>=3.9.0",
    "pytorch_lightning>=2.0.0",
    "Pillow>=10.0.0",
    "tqdm>=4.65.0",
    "pandas>=2.0.0",
    "ultralytics>=8.0.0",
]

[project.optional-dependencies]
pathfinding = [
    "rasterio>=1.3.0",
    "osgeo>=3.0.0",
]
trauma = [
    "transformers>=4.30.0",
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"
